# web

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  index.html  package-lock.json  package.json  svg_to_dioxus.py  tailwind.config.js
public/: tailwind.css
src/: icons.rs  lib.rs  main.rs  routes.rs  store.rs
src/api/: auth.rs  indexer.rs  invite.rs  job.rs  mod.rs  request_profile.rs  token.rs  user.rs  version.rs
src/components/: header.rs  login_required.rs  mod.rs  settings_navbar.rs  user_preferences_navbar.rs
src/components/modal/: indexer.rs  invite.rs  mod.rs  request_profile.rs
src/components/ui/: input.rs  mod.rs  select.rs
src/hooks/: mod.rs  use_mutate.rs  use_query.rs  use_query_provider.rs  use_swr.rs  use_taigla_api.rs
src/pages/: home.rs  mod.rs  settings.rs
src/pages/auth/: login.rs  mod.rs
src/pages/settings/: background_job.rs  indexer.rs  indexers.rs  invites.rs  mod.rs  request_profiles.rs  users.rs
src/pages/users/: mod.rs  preferences.rs
src/query/: mod.rs
src/reducers/: api.rs  auth.rs  mod.rs
src/redux/: dispatcher.rs  effect.rs  mod.rs  reducer.rs  simple_hash.rs  slice.rs  store.rs  subscription.rs  value.rs
src/services/: mod.rs  settings.rs
src/states/: mod.rs  taigla_api.rs
