[package]
name = "taigla"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
dioxus-router = "0.4.0"
dioxus-logger = "0.4.1"
fermi = "0.4.0"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.190"
serde_json = "1.0.108"
web-sys = { version = "0.3.64", features = ["Window", "Storage"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
