[package]
name = "taigla"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-logger = "0.5.1"
tracing = "0.1.40"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.190"
serde_json = "1.0.108"
web-sys = { version = "0.3.64", features = ["Window", "Storage"] }
futures-util = "0.3.29"
async-channel = "1.9.0"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
